--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -69,7 +69,7 @@
     "from glob import glob\n",
     "\n",
     "# load filenames for human and dog images\n",
-    "human_files = np.array(glob(\"lfw/*/*\"))\n",
+    "human_files = np.array(glob(\"lfw/*/*/*\"))\n",
     "dog_files = np.array(glob(\"dogImages/*/*/*\"))\n",
     "\n",
     "# print number of images in each dataset\n",
@@ -895,7 +895,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -909,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
