Question 2: Assess the Dog Detector

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -425,12 +425,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 2: Assess the Dog Detector\n",
+      "0.0 percentage of the first 100 images in human_files_short have a detected dog.\n",
+      "100.0 percentage of the first 100 images in dog_files_short have a detected dog.\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short."
+    "### on the images in human_files_short and dog_files_short.\n",
+    "\n",
+    "# prints the percentage of human face detected on the images, whose \n",
+    "# image filepaths are stored in the variable list_of_img_filepaths\n",
+    "def dogDetectionPerformanceAnalysis(list_of_img_filepaths, image_class_type):\n",
+    "    dogs = 0\n",
+    "    for img_filepath in list_of_img_filepaths:\n",
+    "        if dog_detector(img_filepath): \n",
+    "            dogs = dogs + 1\n",
+    "    dog_pct = dogs*100/len(list_of_img_filepaths)\n",
+    "    print('{0} percentage of the first {1} images in {2}_files_short have a detected dog.'.format(dog_pct, len(list_of_img_filepaths), image_class_type))\n",
+    "\n",
+    "print('Question 2: Assess the Dog Detector')\n",
+    "dogDetectionPerformanceAnalysis(human_files_short, 'human')\n",
+    "dogDetectionPerformanceAnalysis(dog_files_short, 'dog')"
    ]
   },
   {
@@ -442,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
